Mon Sep  9 20:37:21 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* tao/Strategies/Makefile: Change rules.nested.GNU to rules.nonested.GNU.

Mon Sep  9 01:25:56 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* rules.tao.GNU:
	* orbsvcs/tests/Event/Basic/Makefile:
	* tests/Param_Test/Makefile:
	  Remove references to obsolete ACE_HAS_GNUG_PRE_2_8 make 
	  variable.

Sun Sep  8 21:04:45 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* tests/Bug_1270_Regression/Makefile:
	* tests/Bug_1270_Regression/run_test.pl:
	* tests/Bug_1270_Regression/Test.idl:
	* tests/Bug_1270_Regression/Echo.h:
	* tests/Bug_1270_Regression/Echo.cpp:
	* tests/Bug_1270_Regression/client.cpp:
	* tests/Bug_1270_Regression/Echo_Caller.h:
	* tests/Bug_1270_Regression/Echo_Caller.cpp:
	* tests/Bug_1270_Regression/ORB_Task.h:
	* tests/Bug_1270_Regression/ORB_Task.cpp:
	* tests/Bug_1270_Regression/Server_Timer.h:
	* tests/Bug_1270_Regression/Server_Timer.cpp:
	* tests/Bug_1270_Regression/shutdown.cpp:
	* tests/Bug_1270_Regression/server.cpp:
	  Add regression test for bug 1270

	* tests/Bug_1269_Regression/Makefile:
	* tests/Bug_1269_Regression/run_test.pl:
	* tests/Bug_1269_Regression/Test.idl:
	* tests/Bug_1269_Regression/Echo.h:
	* tests/Bug_1269_Regression/Echo.cpp:
	* tests/Bug_1269_Regression/client.cpp:
	* tests/Bug_1269_Regression/Echo_Caller.h:
	* tests/Bug_1269_Regression/Echo_Caller.cpp:
	* tests/Bug_1269_Regression/ORB_Task.h:
	* tests/Bug_1269_Regression/ORB_Task.cpp:
	* tests/Bug_1269_Regression/Server_Timer.h:
	* tests/Bug_1269_Regression/Server_Timer.cpp:
	* tests/Bug_1269_Regression/shutdown.cpp:
	* tests/Bug_1269_Regression/server.cpp:
	  Add regression test for bug 1269, currently the test "passes",
	  but it used to fail so we need a regression test for it
	  anyways.

Mon Sep  9 00:24:44 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* examples/Event_Comm/Makefile:
	* examples/POA/TIE/Makefile:
	* examples/Quoter/Makefile:
	* examples/TypeCode_Creation/Makefile: