@@ -1,3 +1,15 @@
+Tue Sep 10 03:37:08 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
+ 
+	* tests/Connection_Timeout/Makefile:
+	* tests/DSI_Gateway/Makefile:
+	* tests/LongUpcalls/Makefile:
+	* tests/Param_Test/Makefile:
+	  Do not do final link in these tests unless corba_messaging=1
+
+	* orbsvcs/Makefile:
+	  Do not build CosEvent_Service and Event_Service unless 
+	  corba_messaging=1.
+
 Mon Sep  9 20:37:21 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
 
 	* tao/Strategies/Makefile: Change rules.nested.GNU to rules.nonested.GNU.
